--- a/app/src/main/res/layout/account_configuration_layout.xml
+++ b/app/src/main/res/layout/account_configuration_layout.xml
@@ -77,4 +77,11 @@
         android:visibility="gone"
         android:id="@+id/welcome_nickname_edit"/>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:id="@+id/setting_doing"/>
+
 </RelativeLayout>
