--- a/app/src/main/res/layout/account_configuration_layout.xml
+++ b/app/src/main/res/layout/account_configuration_layout.xml
@@ -11,26 +11,7 @@
         android:src="@mipmap/welcome_step_1"
         android:visibility="invisible"
         android:id="@+id/step_image"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/step_image"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:textSize="22sp"
-        android:id="@+id/title"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/title"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:textColor="#cccccc"
-        android:textSize="18sp"
-        android:id="@+id/subtitle"/>
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -83,5 +64,79 @@
         android:layout_centerInParent="true"
         android:visibility="gone"
         android:id="@+id/setting_doing"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:id="@+id/completed_big_image"
+        android:background="@mipmap/welcome_step_big_bg"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@mipmap/welcome_step_dash_circle_bg"
+        android:visibility="gone"
+        android:id="@+id/completed_dash_image"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        app:civ_border_width="10dp"
+        app:civ_border_color="#FFFFFFFF"
+        android:id="@+id/completed_circle_image"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/completed_circle_image"
+        android:layout_marginTop="10dp"
+        android:visibility="gone"
+        android:gravity="center_horizontal"
+        android:id="@+id/completed_information"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="60dp"
+        android:text="完善"
+        android:visibility="gone"
+        android:id="@+id/welcome_completed_open"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_above="@id/welcome_completed_open"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:text="开启"
+        android:visibility="gone"
+        android:id="@+id/welcome_completed_goon"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/step_image"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="22sp"
+        android:id="@+id/title"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/title"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:textColor="#cccccc"
+        android:textSize="18sp"
+        android:id="@+id/subtitle"/>
 
 </RelativeLayout>
